scout page view/edit

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity
             android:name="com.gamelifestats.glselevate.ScoutEdit"
             android:label="@string/title_activity_gls__act__scout_edit"
-            android:parentActivityName="com.gamelifestats.glselevate.GLS_Act_main" >
+            android:parentActivityName="com.gamelifestats.glselevate.Scout" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gamelifestats.glselevate.GLS_Act_main" />
@@ -49,6 +49,14 @@
         <activity
             android:name="com.gamelifestats.glselevate.Statbook"
             android:label="@string/title_activity_statbook"
+            android:parentActivityName="com.gamelifestats.glselevate.GLS_Act_main" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gamelifestats.glselevate.GLS_Act_main" />
+        </activity>
+        <activity
+            android:name="com.gamelifestats.glselevate.Scout"
+            android:label="@string/title_activity_scout"
             android:parentActivityName="com.gamelifestats.glselevate.GLS_Act_main" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
