--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.gamelifestats.glselevate.GLS_Act_main"
-            android:label="@string/app_name" >
+            android:label="@string/brand_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +24,7 @@
         </activity>
         <activity
             android:name="com.gamelifestats.glselevate.ScoutEdit"
-            android:label="@string/title_activity_gls__act__scout_edit"
+            android:label="@string/brand_name"
             android:parentActivityName="com.gamelifestats.glselevate.Scout" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -32,7 +32,7 @@
         </activity>
         <activity
             android:name="com.gamelifestats.glselevate.PlayBall_List"
-            android:label="@string/title_activity_gls__act__play_ball__list"
+            android:label="@string/brand_name"
             android:parentActivityName="com.gamelifestats.glselevate.GLS_Act_main" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -40,7 +40,7 @@
         </activity>
         <activity
             android:name="com.gamelifestats.glselevate.PlayBall_GameStatsEdit"
-            android:label="@string/title_activity_gls__act__play_ball__game_stats_edit"
+            android:label="@string/brand_name"
             android:parentActivityName="com.gamelifestats.glselevate.PlayBall_List" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -48,7 +48,7 @@
         </activity>
         <activity
             android:name="com.gamelifestats.glselevate.Statbook"
-            android:label="@string/title_activity_statbook"
+            android:label="@string/brand_name"
             android:parentActivityName="com.gamelifestats.glselevate.GLS_Act_main" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -56,7 +56,7 @@
         </activity>
         <activity
             android:name="com.gamelifestats.glselevate.Scout"
-            android:label="@string/title_activity_scout"
+            android:label="@string/brand_name"
             android:parentActivityName="com.gamelifestats.glselevate.GLS_Act_main" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
