--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity
             android:name="com.gamelifestats.glselevate.GameEdit"
             android:label="@string/brand_name"
-            android:parentActivityName="com.gamelifestats.glselevate.PlayBall_List" >
+            android:parentActivityName="com.gamelifestats.glselevate.PlayBall_List"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gamelifestats.glselevate.GLS_Act_PlayBall_List" />
