--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gamelifestats.glselevate"
-    android:versionCode="7"
-    android:versionName="1.0.6" >
+    android:versionCode="8"
+    android:versionName="1.0.7" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -79,6 +79,14 @@
         <activity
             android:name="com.gamelifestats.glselevate.PlayDialog"
             android:label="@string/title_activity_play_dialog" >
+        </activity>
+        <activity
+            android:name="com.gamelifestats.glselevate.BballProfile"
+            android:label="@string/bball_profile"
+            android:parentActivityName="com.gamelifestats.glselevate.GLS_Act_main" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gamelifestats.glselevate.GLS_Act_main" />
         </activity>
     </application>
 
