--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-18
+android.library.reference.1=../android/gridlayout_v7
+android.library.reference.2=../../Programs/adt-bundle-linux-x86_64-20130729/sdk/extras/android/support/v7/gridlayout
