commiting to push

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -95,8 +95,7 @@
         </activity>
         <activity
             android:name="com.gamelifestats.glselevate.GameMeta"
-            android:label="@string/title_activity_game_meta"
-            >
+            android:label="@string/add_meta">
         </activity>
     </application>
 
